force-app/main/default/objects/Default_Business_Hours__mdt/Default_Business_Hours__mdt.object-meta.xml
<CustomObject>
    <label>Default Business Hours</label>
    <pluralLabel>Default Business Hours</pluralLabel>
</CustomObject>