force-app/main/default/objects/Default_Business_Hours__mdt/fields/Close__c.field-meta.xml
<CustomField>
    <fullName>Close__c</fullName>
    <description>See Open__c for format</description>
    <inlineHelpText>See Open field for instruction</inlineHelpText>
    <label>Close</label>
    <length>8</length>
    <required>true</required>
    <type>Text</type>
</CustomField>