force-app/main/default/objects/Default_Business_Hours__mdt/fields/Index__c.field-meta.xml
<CustomField>
    <fullName>Index__c</fullName>
    <description>Index of Days of Week</description>
    <label>Index</label>
    <precision>1</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>