force-app/main/default/objects/Default_Business_Hours__mdt/fields/IsClosed__c.field-meta.xml
<CustomField>
    <fullName>IsClosed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the Center is closed that day ignoring Open and Close fields.</description>
    <label>IsClosed</label>
    <type>Checkbox</type>
</CustomField>