force-app/main/default/objects/Default_Business_Hours__mdt/fields/Open__c.field-meta.xml
<CustomField>
    <fullName>Open__c</fullName>
    <description>Date format &quot;h:mm a&quot; (see: https://docs.oracle.com/javase/7/docs/api/java/text/SimpleDateFormat.html) e.g. &quot;8:30 am&quot;</description>
    <inlineHelpText>Enter in format &quot;h:mm a&quot; e.g. &quot;6:30 am&quot;</inlineHelpText>
    <label>Open</label>
    <length>8</length>
    <required>true</required>
    <type>Text</type>
</CustomField>