force-app/main/default/objects/Default_Business_Hours__mdt/listViews/Default_Business_Hours.listView-meta.xml
<ListView>
    <fullName>Default_Business_Hours</fullName>
    <columns>Index__c</columns>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>IsClosed__c</columns>
    <columns>Open__c</columns>
    <columns>Close__c</columns>
    <filterScope>Everything</filterScope>
    <label>Default Business Hours</label>
    <language>en_US</language>
</ListView>